--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ transition:all 0.3s linear 0s;
       <div class = "navbar-fixed">
       <nav>
         <div class="nav-wrapper" style="height:75px;">
-          <a href="#" class="brand-logo"><img src = "images/sunshine.png"></a>
+          <a href="#" class="brand-logo"><img src = "sunshine.png"></a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="#"><i class=" material-icons">home</i></a></li>
             <li><a href="#"><b>About Us</b></a></li>
@@ -257,8 +257,42 @@ We have one of the largest distributor network spread across the country. Which 
 		
 	</div>
 	</div>
+			     <footer class="page-footer" style="background:black; height:300px;">
+                            <div class="container">
+                              <div class="row">
+                                <div class="col-md-4">
+                                  <h5 class="red-text">Company</h5>
+                                  <ul style="">
+                                    <li><a  href="#!">Home</a></li>
+                                    <li><a  href="#!">About Us</a></li>
+                                    <li><a  href="#!">About Solar</a></li>
+                                    <li><a  href="#!">Products</a></li>
+                                    <li><a  href="#!">Contact Us</a></li>
+                                    <li><a  href="#!">Become a Reseller</a></li>
+                                    <li><a  href="#!">Enquire Now</a></li>
+                                  </ul>
+                                </div>
+                                <div class="col-md-4">
+                                    <h5 class="red-text">SUNSHINE ENERGY INC.</h5>
+                                    <p>Registered Office: 6/383, Vidhyadhar Nagar, Jaipur-302023. </p>
+                                    <p>Corporate Office: A-238E, Road No. 9, Vishkarma Industrial Area, Jaipur-302013</p>
+                                    <p>Sales Office Contact: 0141-4024724</p>
+                                    <p>Contact: (+91) 997-111-9724, 992-808-2292</p>
+                                    <p>Email: mail.renewableenergy@gmail.com</p>
+                                  </div>
+                              <div class="col-md-4">
+                                  <h5 class="red-text"><center>FOLLOW US</center></h5>
+                               </div>
+                              </div>
+                              </div>
+                          </footer>                   
+     <!--JavaScript at end of body for optimized loading-->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+    </body>
+  </html>
 </body>
 </html>
+			    
 
                            
     </body>
