--- a/index.html
+++ b/index.html
@@ -200,9 +200,10 @@ transition:all 0.3s linear 0s;
                   
                       <div class="overview">
                           <div class="section-mid">
-                          <div class="background" style="background:grey; height:870px;">
+                          <div class="background" style="background:grey; height:900px;">
                           <h1  style="color:red; font:40px Poppins,sans-serif; text-transform:uppercase;font-weight:300;"><center><b><u>Company Profile:</u></b></center></h1><br>
-                          <h6 style="font-size:27px;max-width:68%;float:left;margin-left:20px;">Sunshine Energy Inc. Group is one of the leading energy and engineering solutions provider, offering a range of products and services that help customers effectively meet their energy needs in a safe and sustainable manner. Our highly qualified Business executive work closely with our Investors to help them secure maximum returns out of their investments. Our strategic plan of action and infrastructure enables fast growth and secured returns we work closely with our clients to ensure our customers receive full Value for their investments.</h6>
+				  <a href="#" title=""><img src="2.jpg" alt=""></a>
+				  <h6 style="font-size:27px;max-width:68%;float:left;margin-left:20px;">Sunshine Energy Inc. Group is one of the leading energy and engineering solutions provider, offering a range of products and services that help customers effectively meet their energy needs in a safe and sustainable manner. Our highly qualified Business executive work closely with our Investors to help them secure maximum returns out of their investments. Our strategic plan of action and infrastructure enables fast growth and secured returns we work closely with our clients to ensure our customers receive full Value for their investments.</h6>
                           <h6 style="font-size:27px;maz-width:68%;float:left;margin-left:20px;">The Company is associated with various National Bodies such Ministry of New and Renewable Energy (Government of India) & Solar Energy Corporation of India to serve customers with highest quality standard
                           The company is driven by its core values of building enduring relationships and its vision to be a trendsetter in energy solutions. Our integrated energy and engineering solutions portfolio ensure our customers remain at the forefront, now and into the future.
                           </h6>                    
@@ -213,6 +214,7 @@ transition:all 0.3s linear 0s;
                       </div>
                       </div>  
                     </div>
+			  <a href="#" title=""><img src="Capture1.jpg" alt=""></a>
                     <br><br>
                     <div class="background" style="background:orange; height:870px;">
                       <br>
@@ -257,7 +259,7 @@ We have one of the largest distributor network spread across the country. Which 
 		
 	</div>
 	</div>
-			     <footer class="page-footer" style="background:black; height:300px;">
+			     <footer class="page-footer" style="background:black; height:500px;">
                             <div class="container">
                               <div class="row">
                                 <div class="col-md-4">
