--- a/index.html
+++ b/index.html
@@ -232,10 +232,11 @@ HPL, with its unwavering commitment to the creation of world-class quality produ
 <body>
 	
 	<div class="row">
+		<div class="background" style="background:red; height:500px;">
 	<div class="container col-lg-4 col-md-6 col-sm-12">
 		<section>
 		<div id="INA-Isolation Energy(Overview)">
-		<h1 style="color:black; font:40px Poppins,sans-serif;letter-spacing:1.5px; text-transform:uppercase;font-weight:300;"><u>INA-Isolation Energy(Overview)</u></h1>
+		<h1 style="color:white; font:40px Poppins,sans-serif;letter-spacing:1.5px; text-transform:uppercase;font-weight:300;"><u>INA-Isolation Energy(Overview)</u></h1>
 		</div>
 		<p style="font:courier;coulor:black;">
 		Insolation energy, a state of the art manufacturing facility specializing in high efficiency PV Module located in Jaipur
@@ -246,7 +247,7 @@ HPL, with its unwavering commitment to the creation of world-class quality produ
 	<div class="container col-lg-4 col-md-6 col-sm-12">
 		<section>
 		<div id="ourdistibuters">
-		<h1 style="color:black; font:40px Poppins,sans-serif;letter-spacing:1.5px; text-transform:uppercase;font-weight:300;"><u>Our Distributor Networks</u></h1>
+		<h1 style="color:white; font:40px Poppins,sans-serif;letter-spacing:1.5px; text-transform:uppercase;font-weight:300;"><u>Our Distributor Networks</u></h1>
 		</div>
 		<p>
 			We sell and distribute our products through a network of authorized dealers or distributors, who further sell our products to retailers and other end-consumers. However, our sales to power utilities, including to Power Utilities, and certain other institutional customers, such as developers of residential and commercial building projects and OEMs, are undertaken pursuant to direct contractual arrangements with such customers.
